# my-tiny-data-collider

./: .env.example  .gitignore  .yamllint  AI_ASSISTANT_KNOWLEDGE_BASE.md  AI_CHAT_PRACTICES.md  AI_WORKSESSION_QUICKSTART.md  ARCHITECTURE.md  ARCHITECTURE_CLARIFICATION.md  BRANCHING_STRATEGY.md  BRANCH_DEVELOPMENT_PLAN.md  CHANGELOG.md  CODE-MAP.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_WORKFLOW.md  ENGINE_COORDINATION.md  FASTAPI-REFACTORING-PLAN.md  HANDOVER.md  HEALTH_CHECK_SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INTEGRATION_ASSESSMENT.md  PARAMETER_MAPPING_RESULTS.md  PARAMETER_MAPPING_TEST_ISSUES.md  PHASE1_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PROPER_PYDANTIC_APPROACH.md  PR_CHORES.md  PR_DESCRIPTION.md  PR_REFACTOR.md  PUSH_INSTRUCTIONS.md  PYDANTIC_ENHANCEMENT_LONGLIST.md  PYTEST_IMPORT_ISSUE.md  QUICK_REFERENCE.md  README.md  REFACTORING_NOTES.md  (+36 more)
.github/: AI-AGENT-CONFIG.md  BRANCH_INFO.txt  BRANCH_PROTECTION.md  CICD_SETUP_COMPLETE.md  CLEANUP_PLAN.md  COPILOT_CHORES.md  ENHANCED_CICD_SUMMARY.md  FEATURE_BRANCH_SYNC.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  WEEK2_ISSUES.md  WEEK2_QUICK_START.md  WEEK2_SESSION_READY.md  WORKFLOW_ASSESSMENT.md  WORKFLOW_OUTPUTS_INPUTS.md  copilot-instructions.md  my-tiny-toolset.code-workspace  pull_request_template.md
AI/: README.md
classification/: README.md
config/: .foam-note.md  README.md  methods_inventory_v1.yaml  models_inventory_v1.yaml  tool_schema_v2.yaml
docs/: API_ERROR_RESPONSES.md  CHORES_EXECUTION_SUMMARY.md  CLEANUP_ORPHANED_FILES.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  CONSOLIDATION_ARCHITECTURE.md  CONTEXT_MANAGEMENT_DEEP_DIVE.md  DEVELOPMENT_PROGRESS.md  DRIVE_TOOLS.md  ENV_VAR_AUDIT.md  FEATURE_BRANCH_STRATEGY.md  FIELD_RESEARCH_SUGGESTIONS.md  FINAL_CLEANUP_REPORT.md  FIRESTORE_INDEXES_AUDIT.md  FIX_EVENT_TYPE_BUG.md  GITHUB_ACTIONS_GUIDE.md  GMAIL_TOOLS.md  HANDOVER_PHASE_13_COMPLETE.md  HANDOVER_PHASE_14_START.md  HOW_TO_START_SESSION.md  IMPLEMENTATION_CHECKLIST.md  IMPORT_AUDIT_REPORT.md  IMPROVEMENTS_VISUAL_GUIDE.md  IMPROVEMENT_SUMMARY.md  LAYERED_ARCHITECTURE_FLOW.md  MVP_SPECIFICATION.md  PARAMETER_MAPPING_RESULTS.md  PARAMETER_MAPPING_TEST_ISSUES.md  PERSISTENCE_OVERVIEW.md  PHASE1_COMPLETION_SUMMARY.md  POLICY_AND_USER_ID_FLOW.md  PYDANTIC_AI_INTEGRATION_OVERVIEW.md  PYDANTIC_EXAMPLES_AUDIT.md  PYDANTIC_VALIDATION_IMPLEMENTATION.md  PYTEST_IMPORT_ISSUE.md  README.md  REFACTORING_COMPLETE.md  SECURITY_VALIDATION_IMPROVEMENTS.md  SHEETS_TOOLS.md  SOLID_FINAL_STATUS.md  (+19 more)
scripts/: PHASE2_README.md  PHASE2_SUMMARY.md  README.md  analyze_model_transformations.py  audit_pydantic_examples.py  authenticate_solid.py  cleanup_generated_files.ps1  create_week2_issues.ps1  debug_startup.py  generate_method_docs.py  generate_method_tools.py  generate_tool_docs.py  generate_tools.py  get_token.py  init_solid_pod.py  main.py  phase2_01_enhanced_casefile_model.py  (+26 more)
(+697 files in other folders)
